--- a/environments/production/env.yaml
+++ b/environments/production/env.yaml
@@ -1,13 +1,13 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: example-deploy
-#   namespace: example  
-# spec:
-#   template:
-#     spec:
-#       containers:
-#       - name: example-app
-#         env:
-#         - name: ENVIRONMENT
-#           value: Production
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: example-deploy
+  namespace: example  
+spec:
+  template:
+    spec:
+      containers:
+      - name: example-app
+        env:
+        - name: ENVIRONMENT
+          value: Production
