--- a/environments/production/resource_limits.yaml
+++ b/environments/production/resource_limits.yaml
@@ -3,15 +3,15 @@
 # metadata:
 #   name: example-deploy
 #   namespace: example  
-# spec:
-#   template:
-#     spec:
-#       containers:
-#       - name: example-app
-#         resources:
-#           requests:
-#             memory: "64Mi"
-#             cpu: "50m"
-#           limits:
-#             memory: "256Mi"
-#             cpu: "500m"
+# # spec:
+# #   template:
+# #     spec:
+# #       containers:
+# #       - name: example-app
+# #         resources:
+# #           requests:
+# #             memory: "64Mi"
+# #             cpu: "50m"
+# #           limits:
+# #             memory: "256Mi"
+# #             cpu: "500m"
