--- a/environments/development/kustomization.yaml
+++ b/environments/development/kustomization.yaml
@@ -1,7 +1,20 @@
 bases:
   - ../../application
+  
 patches:
-  - replica_count.yaml
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: example-deploy
+      namespace: example
+    spec:
+      replicas: 10
+  target:
+    group: apps
+    version: v1
+    kind: Deployment
+    name: example
 
 configMapGenerator:
 - name: example-config
