--- a/environments/production/kustomization.yaml
+++ b/environments/production/kustomization.yaml
@@ -1,9 +1,21 @@
 bases:
   - ../../application
 patches:
-  - replica_count.yaml
-  - env.yaml
-  - resource_limits.yaml
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: example-deploy
+        namespace: example
+      spec:
+        replicas: 10
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: example-deploy
+      namespace: example
+
 configMapGenerator:
 - name: example-config
   namespace: example
