Change patch in prod

--- a/environments/production/kustomization.yaml
+++ b/environments/production/kustomization.yaml
@@ -1,5 +1,6 @@
 bases:
   - ../../application
+
 patches:
   - patch: |-
       apiVersion: apps/v1
@@ -16,12 +17,12 @@ patches:
       name: example-deploy
       namespace: example
 
-configMapGenerator:
-- name: example-config
-  namespace: example
-  #behavior: replace
-  files:
-    - configs/config.json
-images:
-- name: aimvector/python
-  newTag: 1.0.1
+# configMapGenerator:
+# - name: example-config
+#   namespace: example
+#   #behavior: replace
+#   files:
+#     - configs/config.json
+# images:
+# - name: aimvector/python
+#   newTag: 1.0.1
