--- a/environments/development/kustomization.yaml
+++ b/environments/development/kustomization.yaml
@@ -7,7 +7,7 @@ patches:
       kind: Deployment
       metadata:
         name: example-deploy
-        namespace: example
+        namespace: example-dev
       spec:
         replicas: 5
     target:
